Version 0.9 (2016-12-18)

The 'boot' program can now be run as unprivileged user, allowing any
user to create unprivileged Subhurds.

An ethernet multiplexer (eth-multiplexer translator) has been merged
into this repository.  This is a network multiplexer that makes
available virtual interfaces, and routes traffic between these and a
real ethernet interface.  It uses the Berkeley Packet Filter library
(libbpf), which has also been merged.  The ethernet multiplexer now
generates and uses stable pseudo-random ethernet addresses for the
virtual interfaces.

As usual, bugs have been fixed throughout the code, notably in
libpager and ext2fs which now gracefully handles running out of space.
Further compatibility fixes have been applied (for compliance to
standards such as POSIX).

Version 0.8 (2016-05-18)

The netfs library is using the lockless reference-counting primitives
for both peropen and node objects now, and the global reference
counting lock has been removed.

The integer hashing library gained a new interface to use non-integer
keys.  It is now used in libdiskfs' and nfs' node cache, and the ftpfs
translator.

Several bugs in our native fakeroot tool have been fixed improving
stability and correctness of the translation.

The devnode translator and the hurd-slab library have been merged into this
repository.

The code has been cleaned up, and we fixed numerous bugs, most notably
a crash in pfinet, a locking bug in libdiskfs, and an out-of-bounds
access in ext2fs' block cache.

Version 0.7 (2015-10-31)

The node cache in ext2fs has been improved, generalized, and moved to
libdiskfs.  It is now also used by isofs and fatfs.

The native fakeroot tool has been greatly improved.  It now handles
named sockets, and multiple corner cases related to permissions were
identified and fixed.

A new utility `rpcscan' has been introduced.  It scans Mach servers
and displays the RPCs handled by the associated demuxer.
